changes for archived site

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.full_name }}</a>
-
+    <p class="archive-notice">This is the archived site for the Fall 2021 session of CMS.405 — for the current site, click <a href="http://cms405.github.io/">here</a>.</p>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
